🔥 METAL GEAR SOLID SHARD SECTION - BRUTAL CYBERPUNK TRANSFORMATION
⚡ MGS-Style Visual Effects:
- Animated grid background with moving patterns
- Scanlines effect with continuous scrolling
- Fire particles with flickering animation
- Dynamic sparks with random generation
- Bio-tech color palette (red/green/cyan)

🎮 Typography & Text Effects:
- Courier New monospace font for hacker aesthetic
- GLITCH text with random shadow distortion
- PROTOCOL text with pulsing glow
- Typewriter effect with blinking cursor
- Uppercase hacker-style naming conventions

🔥 Advanced Animations:
- Feature cards enter with staggered delays
- Icon pulse effects with radial gradients
- Hover sparks that rotate around icons
- Scan line sweeps on card hover
- Button shine effects with gradient overlays

⚡ Interactive Elements:
- SHARD CTA button with fire gradient
- MGS-style disabled buttons with loading text
- Icon backgrounds with pulsing energy
- Random spark generation via JavaScript
- Glitch text distortion effects

🎯 Metal Gear Solid Aesthetics:
- Raw cyberpunk color scheme (#ff0040, #00ff00, #00ffff)
- Bio-tech visual language
- Hacking/terminal interface styling
- Tactical military naming conventions
- Brutal industrial design elements

Maximum visual impact achieved! 🔥⚡🎮

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             <span class="highlight-text">Brutal focus on fun and signal.</span>
           </p>
           <div class="hero-actions">
-            <a href="#shard" class="btn btn-primary">
-              <span>See SHARD Protocol</span>
-              <i class="fas fa-arrow-right" aria-hidden="true"></i>
+            <a href="#shard" class="btn btn-primary shard-cta-btn">
+              <span class="shard-btn-text">See SHARD Protocol</span>
+              <i class="fas fa-arrow-right shard-btn-icon" aria-hidden="true"></i>
             </a>
             <a href="#" class="btn btn-secondary btn-disabled">
               <i class="fab fa-discord" aria-hidden="true"></i>
@@ -125,59 +125,82 @@
       </div>
     </section>
 
-    <!-- SHARD Protocol Section -->
-    <section id="shard" class="shard-section" aria-labelledby="shard-title">
+    <!-- SHARD Protocol Section - Metal Gear Solid Style -->
+    <section id="shard" class="shard-section mgs-section" aria-labelledby="shard-title">
+      <div class="mgs-background">
+        <div class="mgs-grid"></div>
+        <div class="mgs-scanlines"></div>
+        <div class="mgs-sparks"></div>
+        <div class="mgs-fire-particles"></div>
+      </div>
       <div class="container">
-        <div class="section-header">
-          <h2 id="shard-title" class="section-title">SHARD Protocol</h2>
-          <p class="section-subtitle">
-            Team-based 4v4 extraction-style PvP: capture flags, breach the base, and silence the enemy — with tactical
-            voice commands.
+        <div class="section-header mgs-header">
+          <h2 id="shard-title" class="section-title mgs-title">
+            <span class="mgs-text-glitch">SHARD</span>
+            <span class="mgs-text-protocol">PROTOCOL</span>
+          </h2>
+          <p class="section-subtitle mgs-subtitle">
+            <span class="mgs-typewriter">Team-based 4v4 extraction-style PvP: capture flags, breach the base, and
+              silence the enemy — with tactical voice commands.</span>
           </p>
         </div>
 
-        <div class="shard-grid">
-          <div class="shard-feature">
-            <div class="feature-icon">
-              <i class="fas fa-microphone" aria-hidden="true"></i>
+        <div class="shard-grid mgs-grid">
+          <div class="shard-feature mgs-feature" data-mgs-delay="0.2s">
+            <div class="feature-icon mgs-icon">
+              <div class="mgs-icon-bg"></div>
+              <i class="fas fa-microphone mgs-icon-symbol" aria-hidden="true"></i>
+              <div class="mgs-icon-sparks"></div>
             </div>
-            <h3 class="feature-title">Voice Commands</h3>
-            <p class="feature-desc">
+            <h3 class="feature-title mgs-feature-title">
+              <span class="mgs-text-hack">VOICE_COMMANDS</span>
+            </h3>
+            <p class="feature-desc mgs-feature-desc">
               Revolutionary voice-controlled gameplay where your commands directly impact game mechanics and visual
               feedback systems.
             </p>
           </div>
 
-          <div class="shard-feature">
-            <div class="feature-icon">
-              <i class="fas fa-crosshairs" aria-hidden="true"></i>
+          <div class="shard-feature mgs-feature" data-mgs-delay="0.4s">
+            <div class="feature-icon mgs-icon">
+              <div class="mgs-icon-bg"></div>
+              <i class="fas fa-crosshairs mgs-icon-symbol" aria-hidden="true"></i>
+              <div class="mgs-icon-sparks"></div>
             </div>
-            <h3 class="feature-title">4v4 Tactical</h3>
-            <p class="feature-desc">
+            <h3 class="feature-title mgs-feature-title">
+              <span class="mgs-text-hack">4V4_TACTICAL</span>
+            </h3>
+            <p class="feature-desc mgs-feature-desc">
               Capture flags → breach enemy base. Objective-driven PvP with clear win conditions.
             </p>
           </div>
 
-          <div class="shard-feature">
-            <div class="feature-icon">
-              <i class="fas fa-users" aria-hidden="true"></i>
+          <div class="shard-feature mgs-feature" data-mgs-delay="0.6s">
+            <div class="feature-icon mgs-icon">
+              <div class="mgs-icon-bg"></div>
+              <i class="fas fa-users mgs-icon-symbol" aria-hidden="true"></i>
+              <div class="mgs-icon-sparks"></div>
             </div>
-            <h3 class="feature-title">Dynamic Classes</h3>
-            <p class="feature-desc">
+            <h3 class="feature-title mgs-feature-title">
+              <span class="mgs-text-hack">DYNAMIC_CLASSES</span>
+            </h3>
+            <p class="feature-desc mgs-feature-desc">
               Multiple specialized roles with unique abilities and playstyles. Each class offers distinct tactical
               advantages.
             </p>
           </div>
         </div>
 
-        <div class="shard-actions">
-          <a href="#" class="btn btn-primary btn-disabled">
-            <i class="fas fa-clock" aria-hidden="true"></i>
-            <span>Steam Page Coming Soon</span>
+        <div class="shard-actions mgs-actions">
+          <a href="#" class="btn btn-primary btn-disabled mgs-btn">
+            <div class="mgs-btn-bg"></div>
+            <i class="fas fa-clock mgs-btn-icon" aria-hidden="true"></i>
+            <span class="mgs-btn-text">STEAM_PAGE_LOADING...</span>
           </a>
-          <a href="#" class="btn btn-secondary btn-disabled">
-            <i class="fab fa-discord" aria-hidden="true"></i>
-            <span>Discord Coming Soon</span>
+          <a href="#" class="btn btn-secondary btn-disabled mgs-btn">
+            <div class="mgs-btn-bg"></div>
+            <i class="fab fa-discord mgs-btn-icon" aria-hidden="true"></i>
+            <span class="mgs-btn-text">DISCORD_INITIALIZING...</span>
           </a>
         </div>
       </div>
