--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
           </p>
           <div class="hero-actions">
             <a href="#shard" class="btn btn-primary shard-cta-btn">
-              <span class="shard-btn-text">See SHARD Protocol</span>
-              <i class="fas fa-arrow-right shard-btn-icon" aria-hidden="true"></i>
+              <span class="shard-btn-text">ACCESS SHARD PROTOCOL</span>
+              <i class="fas fa-chevron-right shard-btn-icon" aria-hidden="true"></i>
             </a>
             <a href="#" class="btn btn-secondary btn-disabled">
               <i class="fab fa-discord" aria-hidden="true"></i>
